# QboStuff

./: README.md
cancel_goals/: CMakeLists.txt  package.xml
cancel_goals/src/: organizer.cpp  organizer.h  simple_navigation_cancel.cpp
depthimage_to_laserscan/launch/: depthtolaser.launch
itinerary/: CMakeLists.txt  package.xml
itinerary/src/: gotoface.py  itinerary.py
navivi/: CMakeLists.txt  package.xml
navivi/src/: navivi.cpp
qbo_arduqbo/src/: servos.cpp
qbo_bringup/launch/: minimal.launch
qbo_bringup/launch/includes/: 3dsensor.launch  robot_pose_ekf.launch
qbo_bringup/param/: diagnostics.yaml  diagnostics.yaml~
qbo_description/launch/: test.launch~
qbo_description/urdf/: asus_xtion_pro.urdf.xacro  base.urdf.xacro
qbo_face_detection/src/: face_detector.cpp
qbo_face_xtion/: CMakeLists.txt  package.xml
qbo_face_xtion/msg/: FacesPos.msg
qbo_face_xtion/src/: .qbo_face_xtion.cpp.swp  qbo_face_xtion.cpp  qbo_face_xtion.h
qbo_joypad/: package.xml
qbo_joypad/src/: joypad_controller.py
qbo_laser_slam/config/: base_local_planner_params.yaml  costmap_common.yaml  costmap_common_params.yaml
qbo_laser_slam/launch/: .mapping.launch.swp  hector_mapping.launch  mapping.launch  mapping_test.launch  navigation.launch  navigation2.launch  testCostmap.launch
qbo_laser_slam/launch/test_launches/: amcl_qbo.launch  gmapping_qbo.launch  openni2.launch  robot_pose_ekf.launch
qbo_laser_slam/maps/: chartreuse.pgm  chartreuse.yaml  chartreuse0902.pgm  chartreuse0902.yaml  chartreuse_07052015.pgm  chartreuse_07052015.yaml  final0902.pgm  final0902.yaml  firstmap.pgm  firstmap.yaml  secondmap.pgm  secondmap.yaml  sejour_quentin.pgm  sejour_quentin.yaml  sejour_quentin_30cm.pgm  sejour_quentin_30cm.yaml  sejour_quentin_lessgood.pgm  sejour_quentin_lessgood.yaml  sejour_quentin_notsobad.pgm  sejour_quentin_notsobad.yaml  sejour_xtionHigh.pgm  sejour_xtionHigh.yaml  sejour_xtionHigh2.pgm  sejour_xtionHigh2.yaml  sejour_xtionHigh3.pgm  sejour_xtionHigh3.yaml  sejour_xtionHigh4.pgm  sejour_xtionHigh4.yaml  sejour_xtionHigh5.pgm  sejour_xtionHigh5.yaml
qbo_laser_slam/rviz_cfg/: config.rviz
qbo_launchers/: CMakeLists.txt  package.xml
qbo_launchers/launch/: costmap_launch.launch
qbo_map_reader/: CMakeLists.txt  package.xml  qbo_map_reader.launch
qbo_map_reader/config/: rvizmapreader.rviz
qbo_map_reader/src/: qbo_map_reader.cpp  qbo_map_reader.h
qbo_multimodal_perception/: CMakeLists.txt  package.xml
qbo_multimodal_perception/src/: .qbo_multimodal_organizer.cpp.swp  .qbo_multimodal_organizer.h.swp  qbo_multimodal_organizer.cpp  qbo_multimodal_organizer.h
qbo_navigation/: CMakeLists.txt  CMakeLists.txt~  package.xml~  sejour_final.pgm  sejour_final.yaml
qbo_navigation/launch/: map3d.launch  qbo_amcl.launch  qbo_exploration.launch  qbo_gmapping.launch  qbo_test_amcl.launch  qbo_test_gmapping.launch
qbo_navigation/launch/includes/: amcl_diff.launch  amcl_qbo_map_from_topic.launch  gmapping_qbo.launch  map_server.launch  move_base_qbo _v2.launch  move_base_qbo.launch  velocity_smoother.launch
qbo_navigation/maps/: aremas.yaml~  bureau_tristan.yaml~  home_jarvis.yaml~  my_map2.yaml~  my_map4.yaml~
qbo_navigation/maps_quentin/: first.pgm  first.yaml
qbo_navigation/param/: amcl_qbo.launch~
qbo_navigation/param/explore/: explore.yaml  explore.yaml~
qbo_navigation/param/move_base/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  navfn_global_planner_params.yaml
qbo_pcl/src/: qbo_pcl_transform.cpp
qbo_perceptor/: CMakeLists.txt  package.xml
qbo_perceptor/src/: qbo_perceptor.cpp  qbo_perceptor.h
qbo_rviz/: CMakeLists.txt  package.xml  package.xml~
qbo_rviz/launch/: map3d.launch  navigation.launch  navigation.launch~  view_qbo_model.launch  view_qbo_model.launch~  view_qbo_model~
qbo_rviz/rviz/: 3d.rviz  camera.rviz  navigation.rviz
qbo_soundlocalization/: CMakeLists.txt  package.xml
qbo_soundlocalization/src/: .qbo_soundlocalization.cpp.swp  qbo_soundlocalization.cpp  qbo_soundlocalization.h
qbo_soundstream/: CMakeLists.txt  package.xml
qbo_soundstream/src/: askforsound.cpp  qbo_request.cpp  qbo_request.h  qbo_soundstream.cpp  qbo_soundstream.h
qbo_soundstream/srv/: soundAcquisition.srv
qbo_soundtransformation/: CMakeLists.txt  package.xml
qbo_soundtransformation/src/: qbo_soundtransformation.cpp  qbo_soundtransformation.h
qbo_transformer/: CMakeLists.txt  package.xml
qbo_transformer/src/: .qbo_transformer.cpp.swp  mytransformer.cpp  qbo_transformer.cpp  qbo_transformer.h  seeNans.cpp
qbo_turnaround/: CMakeLists.txt  package.xml
qbo_turnaround/src/: turnaround.cpp
qbo_videoacquisition/: CMakeLists.txt  package.xml
qbo_videoacquisition/src/: acquisition.cpp  acquisition.h
voronoi/: CMakeLists.txt  global_planner_plugin.xml  package.xml
voronoi/include/voronoi/: voronoi.h
voronoi/src/: .testCostmap.cpp.swo  .testCostmap.cpp.swp  .testCostmap.h.swp  askforpath.cpp  tags  testCostmap.cpp  testCostmap.h  testCostmap_node.cpp  testPath.cpp  voronoi.cpp
voronoi/srv/: .MakemyNavPlan.srv.swp  Feasability.srv  FindClosestInPoseArray.srv  MakemyNavPlan.srv
xtion_test/: CMakeLists.txt  package.xml
xtion_test/src/: xtiontest.cpp  xtiontest.h
