<?xml version="1.0"?>
<package>
  <name>qbo_rviz</name>
  <version>0.1.2</version>
  <description>The qbo_rviz package</description>

  <maintainer email="sylvain-zwolinski@orange.fr">jarvis</maintainer>

  <license>BSD</license>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
